<resources>
    <string name="app_name">Coffee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone">Your Phone</string>
    <string name="your_address">Your Address</string>
    <string name="your_name">Your Name</string>
    <string name="submit">Submit</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="select_image">Select Image</string>
    <string name="product_price">Product Price</string>
    <string name="category_id">Category ID</string>
    <string name="add_product">Add Product</string>
    <string name="xem_danh_s_ch_product">Xem Danh Sách Product</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign in</string>
    <string name="it_s_coffee_time_login_and_lets_get_all_the_coffee_in_the_world_or_at_least_iced_coffee">It’s coffee time! Login and lets get all the coffee in the world! Or at least iced coffee.</string>
    <string name="enter_username">Enter username</string>
    <string name="test123_gmail_com">test123@gmail.com</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="_123456">123456</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_here">Reset here</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="textview">TextView</string>
    <string name="todoo">TODO</string>
    <string name="img">TODO</string>
    <string name="coffe_magic">Coffe Magic</string>
    <string name="back">Back</string>
    <string name="please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
    <string name="imgg">TODO</string>
    <string name="forgot_passwordd">Forgot password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_emaill">Your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="we_are_so_excited_you_re_ready_to_become_apart_of_our_coffee_network_don_t_forget_check_out_your_perks">We are so excited you’re ready to become apart of our coffee network! don’t forget check out your perks!</string>
    <string name="confirm_password">Confirm Password</string>
</resources>