<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_login"
    android:orientation="vertical"
    android:background="#f8ebd8">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="67dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_launcher" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rounded_corner">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textColor="#4B2C20"
            android:textSize="28sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/it_s_coffee_time_login_and_lets_get_all_the_coffee_in_the_world_or_at_least_iced_coffee"
            android:textColor="#4B2C20"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Username"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/edtgmail"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12sp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"

            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textColor="#4e8d7c"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtgmail" />

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:hint="@string/type_your_password"
            android:inputType="textPassword"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:textSize="16sp"

            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView81"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_rounded_button"
            android:text="@string/login"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#F6F2ED"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCheckRsl" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="212dp"
            android:background="@drawable/shape_rounded_button"
            android:text="@string/create_new_account"
            android:textColor="#F6F2ED"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtpassword" />

        <TextView
            android:id="@+id/textView101"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/forgot_password"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toStartOf="@+id/txtresetpass"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

        <TextView
            android:id="@+id/txtresetpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="108dp"
            android:text="@string/reset_here"
            android:textColor="#4B2C20"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#A6A5A5"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtresetpass" />

        <TextView
            android:id="@+id/txtCheckRsl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/textview"
            android:textColor="#FB2745"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtpassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>