<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset_password"
    android:orientation="vertical"
    android:background="#f8ebd8">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/back"
            android:textColor="#4B2C20"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/imgg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-117dp"
        android:background="@drawable/shape_rounded_corner">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/forgot_passwordd"
            android:textColor="#4B2C20"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.248"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="322dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/please_enter_your_email_to_reset_the_password"
            android:textColor="#4B2C20"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/your_emaill"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/gmailreset"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12sp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="normal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnreset"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_rounded_button"
            android:text="@string/reset_password"
            android:textColor="#F6F2ED"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gmailreset" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>