<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fagment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/your_email"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/your_phone"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/your_address"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/your_name"
            android:textColor="#4E8D7C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_regular"

            android:inputType="textEmailAddress"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:ignore="LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_regular"
            android:hint=""
            android:inputType="textEmailAddress"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_regular"
            android:hint=""
            android:inputType="textEmailAddress"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="LabelFor,RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/shape_rounded_correr_full"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_regular"
            android:hint=""
            android:inputType="textEmailAddress"
            android:paddingStart="10sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="308dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_rounded_button"
            android:text="@string/submit"
            android:textColor="#F6F2ED"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress" />



        <TextView
            android:id="@+id/tvUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>